fix config import